Bug mit String as number fiyyed