@@ -4,6 +4,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 
+
+// Tostirng, Notizen ändern odner löschen usw.
+
 public class Main {
     public static void main(String[] args) {
         String username;
@@ -24,13 +27,13 @@ public class Main {
     }
 
     static void checkinstanz(String username, Scanner scanner, List<User> alleUser, List<User> currentUser) {
-        User user = currentUser.get(currentUser.size() - 1);
+        User user = currentUser.getLast();
         user.auswahlOption(username, scanner, alleUser, currentUser);
 
     }
 
     static void userSwitch(String username, String benutzeroption, Scanner scanner, List<User> alleUser, List<User> currentUser) {
-        if (benutzeroption.toString().toUpperCase().equals("N")) {
+        if (benutzeroption.equalsIgnoreCase("N")) {
             System.out.println("Gib einen Namen ein: ");
             username = scanner.nextLine();
 
@@ -47,7 +50,7 @@ public class Main {
                 benutzerindex = Integer.parseInt(benutzeroption) - 1;
             } catch (NumberFormatException e) {
                 System.out.println("Gib eine gültige Zahl ein: ");
-                currentUser.get(currentUser.size() - 1).auswahlOption(username, scanner, alleUser, currentUser);
+                currentUser.getLast().auswahlOption(username, scanner, alleUser, currentUser);
             }
 
             User newUser = alleUser.get(benutzerindex);
